@@ -1,4 +1,4 @@
-// Copyright (c) 2020, 2021, Oracle and/or its affiliates.
+// Copyright (c) 2020, 2025, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.weblogic.kubernetes.actions.impl;
@@ -11,6 +11,7 @@ import java.util.List;
 
 import oracle.weblogic.kubernetes.actions.impl.primitive.Command;
 import oracle.weblogic.kubernetes.utils.FileUtils;
+import oracle.weblogic.kubernetes.utils.JakartaRefactorUtil;
 
 import static oracle.weblogic.kubernetes.actions.ActionConstants.APP_DIR;
 import static oracle.weblogic.kubernetes.actions.ActionConstants.WORK_DIR;
@@ -35,14 +36,6 @@ public class AppBuilder {
    */
   public static AppParams defaultAppParams() {
     return new AppParams().defaults();
-  }
-
-  /**
-   * Create an AppParams instance with the custom values.
-   * @return an AppParams instance
-   */
-  public static AppParams customAppParams(List<String> srcDirList) {
-    return new AppParams().srcDirList(srcDirList);
   }
 
   /**
@@ -71,18 +64,16 @@ public class AppBuilder {
       cleanupDirectory(archiveSrcDir);
       checkDirectory(archiveSrcDir);
       for (String item : params.srcDirList()) {
-        copyFolder(
-            APP_DIR + "/" + item, 
-            archiveSrcDir);
+        JakartaRefactorUtil.copyAndRefactorDirectory(Paths.get(APP_DIR, item), Paths.get(archiveSrcDir));
       }
-    } catch (IOException ioe) {    
+    } catch (IOException ioe) {
       getLogger().severe("Failed to get the directory " + archiveSrcDir + " ready", ioe);
       return false;
     }
 
     // make sure that we always have an app name
     if (params.appName() == null) {
-      params.appName(params.srcDirList().get(0));
+      params.appName(params.srcDirList().getFirst());
     }
 
     // build the app archive
@@ -116,7 +107,7 @@ public class AppBuilder {
 
     // make sure that we always have an app name
     if (params.appName() == null) {
-      params.appName(params.srcDirList().get(0));
+      params.appName(params.srcDirList().getFirst());
     }
 
     // build the app archive
@@ -184,7 +175,7 @@ public class AppBuilder {
 
     // make sure that we always have an app name
     if (params.appName() == null) {
-      params.appName(params.srcDirList().get(0));
+      params.appName(params.srcDirList().getFirst());
     }
 
     String cmd = String.format(
@@ -210,7 +201,7 @@ public class AppBuilder {
 
     // make sure that we always have an app name
     if (params.appName() == null) {
-      params.appName(params.srcDirList().get(0));
+      params.appName(params.srcDirList().getFirst());
     }
 
     String cmd = String.format(
@@ -242,15 +233,16 @@ public class AppBuilder {
    */
   public boolean archiveApp() {
     List<String> srcFiles  = params.srcDirList();
-    String srcFile = srcFiles.get(0);
+    String srcFile = srcFiles.getFirst();
     String appName = srcFile.substring(srcFile.lastIndexOf("/") + 1, srcFile.lastIndexOf("."));
+    params.appName(appName);
     String archiveSrcDir = params.appArchiveDir() + "/wlsdeploy/applications";
 
     try {
       cleanupDirectory(archiveSrcDir);
       checkDirectory(archiveSrcDir);
       for (String appSrcFile : srcFiles) {
-        if (appSrcFile.length() > 0) {
+        if (!appSrcFile.isEmpty()) {
           getLogger().info("copy {0} to {1} ", appSrcFile, archiveSrcDir);
           String fileName = appSrcFile.substring(appSrcFile.lastIndexOf("/") + 1);
           Files.copy(Paths.get(appSrcFile), Paths.get(archiveSrcDir + "/" + fileName),
