@@ -1,4 +1,4 @@
-// Copyright (c) 2019, 2022, Oracle and/or its affiliates.
+// Copyright (c) 2019, 2025, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator.helpers;
@@ -7,7 +7,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import com.meterware.simplestub.Stub;
 import io.kubernetes.client.openapi.models.V1ObjectMeta;
@@ -49,7 +48,7 @@ class DomainPresenceInfoTest {
   private static final String[] MANAGED_SERVER_NAMES = {"ms1", "ms2", "ms3"};
   private static final List<ServerStartupInfo> STARTUP_INFOS = Arrays.stream(MANAGED_SERVER_NAMES)
         .map(DomainPresenceInfoTest::toServerStartupInfo)
-        .collect(Collectors.toList());
+        .toList();
   private static final String NAMESPACE = "ns";
   private static final String DOMAIN_UID = "domain";
   private final DomainPresenceInfo info = new DomainPresenceInfo(NAMESPACE, DOMAIN_UID);
@@ -233,10 +232,6 @@ class DomainPresenceInfoTest {
     pod.spec(new V1PodSpec().nodeName("aNode"));
   }
 
-  // todo compute availability per cluster: how many servers need to be running, list of servers in
-  // cluster
-  // todo accept list of up-to-date clusters, remove any in info not in the list
-
   @Test
   void whenListClusterResources_removeStrandedClustersFromDomainPresenceInfo() {
     Map<String, ClusterResource> map = new HashMap<>();
@@ -263,23 +258,23 @@ class DomainPresenceInfoTest {
   void afterAddingClusterResource_verifyClusterResourceIsNotNull() {
     final String clusterName = "cluster-1";
     final DomainResource domain = createDomain(NAMESPACE, DOMAIN_UID);
-    final DomainPresenceInfo info = createDomainPresenceInfo(domain);
-    createAndAddClusterResourceToDomainPresenceInfo(info, clusterName);
-    assertThat(info.getClusterResource(clusterName), notNullValue());
+    final DomainPresenceInfo domainPresenceInfo = createDomainPresenceInfo(domain);
+    createAndAddClusterResourceToDomainPresenceInfo(domainPresenceInfo, clusterName);
+    assertThat(domainPresenceInfo.getClusterResource(clusterName), notNullValue());
   }
 
-  @Test // todo do we need there?
+  @Test
   void afterRemoveClusterResource_verifyClusterResourceIsNull() {
     final String clusterName = "cluster-1";
     final DomainResource domain = createDomain(NAMESPACE, DOMAIN_UID);
-    final DomainPresenceInfo info = createDomainPresenceInfo(domain);
-    createAndAddClusterResourceToDomainPresenceInfo(info, clusterName);
-    ClusterResource clusterResource = info.removeClusterResource(clusterName);
+    final DomainPresenceInfo domainPresenceInfo = createDomainPresenceInfo(domain);
+    createAndAddClusterResourceToDomainPresenceInfo(domainPresenceInfo, clusterName);
+    ClusterResource clusterResource = domainPresenceInfo.removeClusterResource(clusterName);
     assertThat(clusterResource, notNullValue());
-    assertThat(info.getClusterResource(clusterName), nullValue());
+    assertThat(domainPresenceInfo.getClusterResource(clusterName), nullValue());
   }
 
-  @Test // todo do we need there?
+  @Test
   void whenClusterResourceNotDefined_removeReturnsNull() {
     final String clusterName = "cluster-1";
     ClusterResource clusterResource = info.removeClusterResource(clusterName);
@@ -290,9 +285,9 @@ class DomainPresenceInfoTest {
   void whenClusterResourceDefined_butServerNotDefined_getEffectiveServerSpec() {
     final String clusterName = "cluster-1";
     final DomainResource domain = createDomain(NAMESPACE, DOMAIN_UID);
-    final DomainPresenceInfo info = createDomainPresenceInfo(domain);
-    createAndAddClusterResourceToDomainPresenceInfo(info, clusterName);
-    EffectiveServerSpec spec = info.getServer("aServer", clusterName);
+    final DomainPresenceInfo domainPresenceInfo = createDomainPresenceInfo(domain);
+    createAndAddClusterResourceToDomainPresenceInfo(domainPresenceInfo, clusterName);
+    EffectiveServerSpec spec = domainPresenceInfo.getServer("aServer", clusterName);
 
     verifyStandardFields(spec);
   }
@@ -311,11 +306,11 @@ class DomainPresenceInfoTest {
     final String MY_RESTART_VERSION = "MyRestartVersion";
 
     final DomainResource domain = createDomain(NAMESPACE, DOMAIN_UID);
-    final DomainPresenceInfo info = createDomainPresenceInfo(domain);
-    createAndAddClusterResourceToDomainPresenceInfo(info, clusterName);
-    info.getClusterResource(clusterName).getSpec().setRestartVersion(MY_RESTART_VERSION);
+    final DomainPresenceInfo domainPresenceInfo = createDomainPresenceInfo(domain);
+    createAndAddClusterResourceToDomainPresenceInfo(domainPresenceInfo, clusterName);
+    domainPresenceInfo.getClusterResource(clusterName).getSpec().setRestartVersion(MY_RESTART_VERSION);
 
-    EffectiveServerSpec spec = info.getServer(serverName, clusterName);
+    EffectiveServerSpec spec = domainPresenceInfo.getServer(serverName, clusterName);
 
     verifyStandardFields(spec);
     assertThat(spec.getClusterRestartVersion(), equalTo(MY_RESTART_VERSION));
@@ -324,25 +319,25 @@ class DomainPresenceInfoTest {
   @Test
   void whenNonClusteredServerStartPolicyUndefined_startServer() {
     final DomainResource domain = createDomain(NAMESPACE, DOMAIN_UID);
-    final DomainPresenceInfo info = createDomainPresenceInfo(domain);
-    assertThat(info.getServer("server1", null).shouldStart(0), Is.is(true));
+    final DomainPresenceInfo domainPresenceInfo = createDomainPresenceInfo(domain);
+    assertThat(domainPresenceInfo.getServer("server1", null).shouldStart(0), Is.is(true));
   }
 
   @Test
   void whenUnconfiguredClusterHasDefaultNumberOfReplicasAndDomainReplicasIs0_dontStartServer() {
     final DomainResource domain = createDomain(NAMESPACE, DOMAIN_UID);
     domain.getSpec().setReplicas(0);
-    final DomainPresenceInfo info = createDomainPresenceInfo(domain);
-    assertThat(info.getServer("server1", "cls1").shouldStart(0), Is.is(false));
+    final DomainPresenceInfo domainPresenceInfo = createDomainPresenceInfo(domain);
+    assertThat(domainPresenceInfo.getServer("server1", "cls1").shouldStart(0), Is.is(false));
   }
 
   @Test
   void whenClusterResourceNotDefined_getDefaultEffectiveClusterSpec() {
     final String clusterName = "cluster-1";
     final DomainResource domain = createDomain(NAMESPACE, DOMAIN_UID);
-    final DomainPresenceInfo info = createDomainPresenceInfo(domain);
+    final DomainPresenceInfo domainPresenceInfo = createDomainPresenceInfo(domain);
 
-    EffectiveClusterSpec clusterSpec = info.getCluster(clusterName);
+    EffectiveClusterSpec clusterSpec = domainPresenceInfo.getCluster(clusterName);
     assertThat(clusterSpec.getClusterLabels(), anEmptyMap());
   }
 
@@ -353,11 +348,11 @@ class DomainPresenceInfoTest {
     final String labelValue = "World";
 
     final DomainResource domain = createDomain(NAMESPACE, DOMAIN_UID);
-    final DomainPresenceInfo info = createDomainPresenceInfo(domain);
-    createAndAddClusterResourceToDomainPresenceInfo(info, clusterName);
-    info.getClusterResource(clusterName).getSpec().getClusterLabels().put(labelKey, labelValue);
+    final DomainPresenceInfo domainPresenceInfo = createDomainPresenceInfo(domain);
+    createAndAddClusterResourceToDomainPresenceInfo(domainPresenceInfo, clusterName);
+    domainPresenceInfo.getClusterResource(clusterName).getSpec().getClusterLabels().put(labelKey, labelValue);
 
-    EffectiveClusterSpec clusterSpec = info.getCluster(clusterName);
+    EffectiveClusterSpec clusterSpec = domainPresenceInfo.getCluster(clusterName);
     Map<String,String> labels = clusterSpec.getClusterLabels();
     assertThat(labels, aMapWithSize(1));
     assertThat(labels.get(labelKey), equalTo(labelValue));
